<resources>
    <string name="app_name">AluguelDeCarros</string>
    <string name="nome_do_locatario">Nome do locatario</string>
    <string name="cnh">Cnh</string>
    <string name="categoria_cnh">Categoria cnh</string>
    <string name="data_da_cnh">Data da cnh</string>
    <string name="cpf">Cpf</string>
    <string name="logradouro">Logradouro</string>
    <string name="n_mero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="cep">Cep</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="data_de_nascimento">Data de nascimento (dd/mm/yyyy)</string>
    <string name="senha">Senha</string>
    <string name="salvar">Salvar</string>
    <string name="continuar">Continuar</string>
    <string name="nome_do_locador">Nome do Locador</string>
    <string name="login">Login</string>
    <string name="lembrar_login">Lembrar login</string>
    <string name="usuario">Usuário</string>
    <string name="senha_login">Senha</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="cor">Cor</string>
    <string name="placa">Placa</string>
    <string name="tipo_de_combust_vel">Tipo de combustível</string>
    <string name="ar_condicionado">Ar-condicionado</string>
    <string name="quatro_portas">Quatro portas</string>
    <string name="trio_el_trico">Trio-elétrico</string>
    <string name="r_dio_gps">Rádio/Gps</string>
    <string name="quilometragem">Quilometragem</string>
    <string name="crlv_e">CRLV-E</string>
    <string name="cpf_propriet_rio">CPF proprietário</string>
    <string name="Registro">Registrar</string>
    <string name="Registro_Locador">Registrar Locador</string>
    <string name="Registro_Locatario">Registrar Locatário</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="registrar_carro">Registrar carro</string>
    <string name="seleciona_a_data_que_vai_alugar">Seleciona a data que vai alugar</string>
    <string name="seleciona_a_data_que_vai_entregar">Seleciona a data que vai entregar</string>
    <string name="termo_de_uso">Ao aceitar esses termos você concorda que ao realizar a locação de um dos veículos registrados em nosso aplicativo o usuário estará sujeito a responder em caso de descumprimento:
    1. Das normas de trânsito resultando em multas, ferimentos, fatalidades ou quaisquer penalizações que afetem o proprietário do veículo;
    2. Falsificação de documentos ou informações;
    3. Não cumprimento do valor monetário referente ao aluguel previamente combinado com o proprietário do veículo.

   E ao cadastrar um veículo em nossa plataforma o proprietário garante a correta apresentação dos documentos e informações solicitados, sendo impossibilitado de realizar cadastro sem qualquer dado obrigatório.
    O proprietário também será responsabilizado em caso de falsificação de documentos e normas de trânsito descumpridas se comprovado que o veículo fornecido não se encontrava em devido estado de uso.
    </string>
    <string name="leia_me">Aceite nossos termos de uso (Clique aqui para ler)</string>
    <string name="preco">Preço por dia</string>
    <string name="RS">R$</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="alugar">Alugar</string>

    <string-array name="tipo_combustivel">
        <item>elétrico</item>
        <item>gasolina</item>
        <item>álcool</item>
        <item>diesel</item>
        <item>GNV</item>
        <item>flex</item>
    </string-array>
</resources>