<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".NewLocatarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_nome_locatarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/nome_do_locatario"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_cnh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/cnh"
            android:inputType="number"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/categoria_cnh"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_data_cnh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/data_da_cnh"
            android:inputType="date"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/cpf"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_logradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/logradouro"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/n_mero"
            android:inputType="number"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/bairro"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/cidade"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/estado"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/cep"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edittext_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/telefone"
            android:inputType="number"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edittext_data_nasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/data_de_nascimento"
            android:inputType="date"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edittext_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/salvar" />

    </LinearLayout>
</ScrollView>