<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.NewLocadorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_nome_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/nome_do_locador"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_cnh_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/cnh"
            android:inputType="number"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_categoria_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/categoria_cnh"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_data_cnh_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/data_da_cnh"
            android:inputType="date"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_cpf_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/cpf"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_logradouro_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/logradouro"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_numero_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/n_mero"
            android:inputType="number"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_bairro_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/bairro"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_cidade_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/cidade"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_estado_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/estado"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edittext_cep_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/cep"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edittext_telefone_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/telefone"
            android:inputType="number"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edittext_email_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edittext_data_nasc_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/data_de_nascimento"
            android:inputType="date"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edittext_senha_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_save_locador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/salvar" />

    </LinearLayout>
</ScrollView>