<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".view.NewCarActivity">



    <EditText
        android:id="@+id/edittext_marca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/marca"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_modelo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/modelo"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edittext_marca"
        app:layout_constraintStart_toStartOf="@id/edittext_marca"
        app:layout_constraintTop_toTopOf="@id/edittext_marca" />

    <EditText
        android:id="@+id/edittext_cor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/cor"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edittext_modelo"
        app:layout_constraintStart_toStartOf="@id/edittext_modelo"
        app:layout_constraintTop_toTopOf="@id/edittext_modelo" />

    <EditText
        android:id="@+id/edittext_placa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/placa"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edittext_cor"
        app:layout_constraintStart_toStartOf="@id/edittext_cor"
        app:layout_constraintTop_toTopOf="@id/edittext_cor" />

    <TextView
        android:id="@+id/textview_combustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="68dp"
        android:text="@string/tipo_de_combust_vel"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/edittext_placa"
        app:layout_constraintTop_toTopOf="@id/edittext_placa" />

    <Spinner
        android:id="@+id/spinner_combustivel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/textview_combustivel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_combustivel"
        app:layout_constraintTop_toTopOf="@id/textview_combustivel"/>

    <CheckBox
        android:id="@+id/check_ar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ar_condicionado"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textview_combustivel"
        app:layout_constraintStart_toStartOf="@id/textview_combustivel"
        app:layout_constraintTop_toBottomOf="@id/textview_combustivel" />

    <CheckBox
        android:id="@+id/check_portas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/quatro_portas"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="@id/textview_combustivel"
        app:layout_constraintTop_toBottomOf="@id/textview_combustivel" />

    <CheckBox
        android:id="@+id/check_trio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/trio_el_trico"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textview_combustivel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/textview_combustivel"
        app:layout_constraintTop_toBottomOf="@id/check_ar" />

    <CheckBox
        android:id="@+id/check_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/r_dio_gps"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@id/textview_combustivel"
        app:layout_constraintTop_toBottomOf="@id/textview_combustivel" />

    <EditText
        android:id="@+id/edittext_quilometragem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/quilometragem"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edittext_placa"
        app:layout_constraintStart_toStartOf="@id/edittext_placa"
        app:layout_constraintTop_toTopOf="@id/edittext_placa" />

    <EditText
        android:id="@+id/edittext_crlve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/crlv_e"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edittext_quilometragem"
        app:layout_constraintStart_toStartOf="@id/edittext_quilometragem"
        app:layout_constraintTop_toTopOf="@id/edittext_quilometragem" />

    <EditText
        android:id="@+id/edittext_cpf_proprietario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/cpf_propriet_rio"
        android:inputType="text"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edittext_crlve"
        app:layout_constraintStart_toStartOf="@id/edittext_crlve"
        app:layout_constraintTop_toTopOf="@id/edittext_crlve" />

    <Button
        android:id="@+id/button_salvar_carro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/continuar"
        android:backgroundTint="@color/fontcolor"
        app:layout_constraintEnd_toEndOf="@id/edittext_cpf_proprietario"
        app:layout_constraintStart_toStartOf="@id/edittext_cpf_proprietario"
        app:layout_constraintTop_toTopOf="@id/edittext_cpf_proprietario" />

</androidx.constraintlayout.widget.ConstraintLayout>